maze.wallfindfollow.WallFindFollowMaze.scala.error
Erreur de compilation :
WallFindFollowMaze:2: error: not found: value estFAceMur
  while(estFAceMur()){
        ^