maze.wallfindfollow.WallFindFollowMaze.scala.code
override def run() {
  while(estFAceMur()){
    avance()
  }
  while(!estSurBiscuit()){
    keepHandOnWallSide()
  }
}

def keepHandOnWallSide(){
  gauche();
  if (estFaceMur()){
    while(estFaceMur()){
    droite();
  }
    avance()
  }
  else{
    avance()
  }
}